<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomePage">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:gravity="center">

            <include
                layout="@layout/add_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
            android:layout_above="@+id/footer"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/padding_10">

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/card_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/fulname"
                        android:inputType="textShortMessage"
                        android:padding="@dimen/padding_15"

                        android:textColor="@android:color/black"
                        android:textColorHint="@color/black_600"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <EditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"

                        android:padding="@dimen/padding_15"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/black_600"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <EditText
                        android:id="@+id/phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/contact_no"
                        android:inputType="numberDecimal"
                        android:padding="@dimen/padding_15"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/black_600"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <EditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/current_location"

                        android:inputType="textShortMessage"
                        android:padding="@dimen/padding_15"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/black_600"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/city"

                        android:inputType="textShortMessage"
                        android:padding="@dimen/padding_15"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/black_600"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <EditText
                        android:id="@+id/state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/state"
                        android:inputType="textShortMessage"
                        android:padding="@dimen/padding_15"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/black_600"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <EditText
                        android:id="@+id/vehicle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:hint="@string/car_name"
                        android:inputType="textShortMessage"
                        android:padding="@dimen/padding_15"
                        android:textColor="@android:color/black"
                        android:textColorHint="@color/black_600"
                        android:textSize="15sp" />
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:card_view="http://schemas.android.com/apk/res-auto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/padding_10"
                    card_view:cardBackgroundColor="@android:color/white"
                    card_view:cardCornerRadius="@dimen/margin_5"
                    card_view:cardElevation="@dimen/padding_3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <EditText
                            android:id="@+id/msg"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"

                            android:gravity="start"
                            android:hint="@string/message"
                            android:lines="5"
                            android:padding="@dimen/padding_15"
                            android:textColor="@android:color/black"
                            android:textColorHint="@color/black_600"
                            android:textSize="15sp" />

                        <!--
                                            <LinearLayout
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:orientation="horizontal"
                                                android:paddingBottom="@dimen/margin_5"
                                                android:weightSum="1">

                                                <TextView
                                                    android:layout_width="0dp"
                                                    android:layout_height="wrap_content"
                                                    android:layout_weight="0.5"
                                                    android:text="Accepted"
                                                    android:gravity="center"
                                                    android:textColor="@android:color/holo_green_light"
                                                    android:textSize="15sp"
                                                    android:textStyle="bold" />

                                                <TextView
                                                    android:layout_width="0dp"
                                                    android:layout_height="wrap_content"
                                                    android:layout_weight="0.5"
                                                    android:text="Rejected"
                                                    android:gravity="center"
                                                    android:textColor="@android:color/holo_red_light"
                                                    android:textSize="15sp"
                                                    android:textStyle="bold" />
                                            </LinearLayout>
                        -->
                    </LinearLayout>
                </androidx.cardview.widget.CardView>


                <Button
                    android:id="@+id/submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/padding_3"
                    android:gravity="center"
                    android:padding="@dimen/padding_15"
                    android:layout_margin="@dimen/padding_10"
                    android:text="Submit"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:textStyle="normal" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:visibility="gone" />


            </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>


